Fixing spacing issues in offers results description

--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -162,8 +162,26 @@
 
 .grid figcaption p {
 	line-height: 0;
+	margin-top: 20px;
+	padding-top: 5px;
+}
+
+.grid figcaption i {
+	color: gray;
 }
  
+.offer_get_btn {
+	position: absolute;
+	right: 50px;
+	top: 75px; 
+}
+
+.offer_profile_btn {
+	position: absolute;
+	right: 50px;
+	top: 15px; 
+}
+
 .grid figcaption a {
     text-align: center;
     padding: 5px 10px;
@@ -172,9 +190,6 @@
     background: #297A4A;
     color: #fff;
 	text-decoration: none;
-    position: relative;
-    right: -140px;
-    bottom: 30px;
 }
 
 .grid figcaption a:hover {
@@ -227,7 +242,7 @@
 	writing-mode: lr-tb;
 }
 
-.20 { border-top-color: #4A9C5C;}
-.30 { border-top-color: #137A2A;}
-.40 { border-top-color: #005914;}
-.50 { border-top-color: #002E0A;}
+.percent_label .20 { border-top-color: #4A9C5C;}
+.percent_label .30 { border-top-color: #137A2A;}
+.percent_label .40 { border-top-color: #005914;}
+.percent_label .50 { border-top-color: #002E0A;}
